--- a/paymentPage.html
+++ b/paymentPage.html
@@ -125,10 +125,10 @@
                                                     <h5>EXPIRATION</h5>
                                                     <ul>
                                                         <li>
-                                                            <input type="number" class="text_box" type="text" value="0" min="1" />
+                                                            <input type="number" class="text_box" type="text" value="0" min="1" max="12" />
                                                         </li>
                                                         <li>
-                                                            <input type="number" class="text_box" type="text" value="2000" min="1" />
+                                                            <input type="number" class="text_box" type="text" value="1988" min="1" />
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -246,7 +246,7 @@
                                                     <h5>EXPIRATION</h5>
                                                     <ul>
                                                         <li>
-                                                            <input type="number" class="text_box" type="text" value="6" min="1" />
+                                                            <input type="number" class="text_box" type="text" value="1" min="1" max="12" />
                                                         </li>
                                                         <li>
                                                             <input type="number" class="text_box" type="text" value="1988" min="1" />
