--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function mobileMenu() {
             <a href="https://www.thesparksfoundationsingapore.org/" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
+            <a href="https://www.thesparksfoundationsingapore.org/contact-us/" class="nav-link">Contact</a>
         </li>
     </ul>
     <div class="hamburger">
